      flag is propagated to the project that use ViSP as 3rd party
    . In vpServo introduce setCameraDoF() that allows to turn off the usage
      of some dof
    . Model-based tracker:
      + Introduce stereo as well as more generic multi camera tracking capabilties
      + New classes vpMbEdgeMultiTracker, vpMbKltMultiTracker, and
        vpMbEdgeKltMultiTracker for the hybrid version
  - Tutorials
    . New tutorial: How to use multi-threading capabilities
    . New tutorial: Crosscompilation for Raspberry Pi from Ubuntu host
    . New tutorial: Installation from prebuilt packages for Arch Linux
    . New tutorial: Installation from prebuilt packages for ROS
    . New tutorial: Installation from prebuilt packages for iOS devices
    . New tutorial: Installation from source for iOS devices
    . New tutorial: How to create a basic iOS application that uses ViSP
    . New tutorial: Image processing on iOS
    . New tutorial: Cross-compilation for NAOqi OS from Ubuntu host
    . New tutorial: How to create an application that uses ViSP on NAOqi OS
    . New Tutorial: Markerless model-based tracking with stereo cameras
  - Bug fixed
    . [#37] How to build for ios? build failed
    . [#38] Wrong urls in visp/doc/tutorial-calibration.doc
    . [#39] Meta header files visp_<module>.h not installed
    . [#40] vpKeyPoint fails to R/W database on big endian arch
    . [#42] Fails to build on Fedora 23 with Coin3-devel
    . [#44] Reshape issue with vpRowVector or vpColVector
    . [#47] Build issue in vpMath.h around vpMath::sign()
    . [#48] Fix vpPoseVector::getThetaUVector() to return the adequate vector
    . [#54] Error in vpHomography::projection()
    . [#59] Unable to use visp-config or visp-config.bat to build a project
            without CMake
    . [#68] Visual C++ 2010 unable to build modules\core\test\math\testMath.cpp
    . [#69] Unable to build ViSP under Windows without OpenCV 3rdparty